# smart-taiko-controller

./: LICENSE  README.md  arduino_permission.sh  kill.sh  pyproject.toml
arduino_firmware/: arduino_firmware.ino
data/: taiko_data copy.csv  taiko_data.csv
models/: label_encoder.pkl  scaler.pkl  taiko_pytorch_model.pth  taiko_rf_model.pkl  taiko_svm_model.pkl  taiko_taikonet_model.pth  taiko_xgb_model.pkl
src/: config.py  data_collector.py  model_trainer.py  taiko_main_visual.py
test/: check_keyboard.py  check_serial.py  taiko_controller.py  taiko_main.py  visualizer_cli.py
